--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "reactniceresume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://noheropage.github.io/base-react-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "anix": "^1.3.6",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.2.0",
     "jquery": "^3.6.0",
     "particles-bg": "^2.5.5",
     "react": "^17.0.1",
@@ -21,6 +22,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
